Revert "Revert "[release] v1.2.3 릴리즈""
This reverts commit 89b08cac80043986004e5f63df41f3cce111250a, reversing
changes made to 2a79c591c85ba22a6cb024dc1652522d3697f70f.